--- a/KTaskRemainder/KTaskRemainder/App.xaml
+++ b/KTaskRemainder/KTaskRemainder/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="KTaskRemainder.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="Resources/Resources.xaml"/>
     </Application.Resources>
 </Application>
