--- a/KTaskRemainder/KTaskRemainder/View/MainWindow.xaml
+++ b/KTaskRemainder/KTaskRemainder/View/MainWindow.xaml
@@ -1,11 +1,14 @@
-﻿<Window x:Class="KTaskRemainder.View.MainWindow"
+﻿<controls:MetroWindow x:Class="KTaskRemainder.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:view="clr-namespace:KTaskRemainder.View"
-        Title="MainWindow"
-        Height="300"
-        Width="300">
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+        EnableDWMDropShadow="True"
+        ResizeMode="CanResizeWithGrip"
+        Title="K Task Remainder"
+        Height="553"
+        Width="601">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,37 +18,70 @@
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="30"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <GridSplitter Grid.Column="1"
+        <GridSplitter Grid.Column="2"
+                      Grid.Row="1"
                       Grid.RowSpan="3"
                       Width="3"
                       ResizeDirection="Columns"
                       HorizontalAlignment="Stretch"
                       VerticalAlignment="Stretch"/>
-        <GridSplitter Grid.Row="1"
+        <GridSplitter Grid.Column="1"
+                      Grid.Row="2"
                       Grid.ColumnSpan="3"
                       Height="3"
                       ResizeDirection="Rows"
                       HorizontalAlignment="Stretch"
                       VerticalAlignment="Stretch"/>
-        <!--Style="{StaticResource lbStyle}"
-                 ItemContainerStyle="{StaticResource lbiStyle}"-->
+        <Label Grid.Column="1"
+               Grid.Row="0"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Content="WAŻNE" />
+        <Label Grid.Column="3"
+               Grid.Row="0"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Content="NIE WAŻNE" />
+        <Label Grid.Column="0"
+               Grid.Row="1"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Content="PILNE">
+            <Label.LayoutTransform>
+                <RotateTransform Angle="-90"/>
+            </Label.LayoutTransform>
+        </Label>
+        <Label Grid.Column="0"
+               Grid.Row="3"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Content="NIE PILNE">
+            <Label.LayoutTransform>
+                <RotateTransform Angle="-90"/>
+            </Label.LayoutTransform>
+        </Label>
         <view:KListBox x:Name="listViewFirst"
-                       Grid.Column="0"
-                       Grid.Row="0"
-                       AllowDrop="True">
-        </view:KListBox>
+                       Grid.Column="1"
+                       Grid.Row="1" />
         <view:KListBox x:Name="listViewSecond"
-                       Grid.Column="2"
-                       Grid.Row="0">
-        </view:KListBox>
+                       Grid.Column="3"
+                       Grid.Row="1" />
+        <view:KListBox x:Name="listViewThird"
+                       Grid.Column="1"
+                       Grid.Row="3" />
+        <view:KListBox x:Name="listViewFourth"
+                       Grid.Column="3"
+                       Grid.Row="3" />
     </Grid>
-</Window>
+</controls:MetroWindow>
