--- a/KTaskRemainder/KTaskRemainder/View/MainPage.xaml
+++ b/KTaskRemainder/KTaskRemainder/View/MainPage.xaml
@@ -67,15 +67,19 @@
         </Label>
         <view:KListBox x:Name="listViewFirst"
                        Grid.Column="1"
-                       Grid.Row="1" />
+                       Grid.Row="1"
+                       Tag="1" />
         <view:KListBox x:Name="listViewSecond"
                        Grid.Column="3"
-                       Grid.Row="1" />
+                       Grid.Row="1"
+                       Tag="2" />
         <view:KListBox x:Name="listViewThird"
                        Grid.Column="1"
-                       Grid.Row="3" />
+                       Grid.Row="3"
+                       Tag="3" />
         <view:KListBox x:Name="listViewFourth"
                        Grid.Column="3"
-                       Grid.Row="3" />
+                       Grid.Row="3"
+                       Tag="4" />
     </Grid>
 </Page>
